<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_saludo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_title_p"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_default"
        android:textSize="@dimen/font_size_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txt_login_fb"
        android:backgroundTint="@color/btn_login"/>

    <Button
        android:id="@+id/btn_login_netflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txt_login_nf"
        android:backgroundTint="@color/btn_login_netflix"/>

    <Button
        android:id="@+id/btn_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txt_recycle_campus"
        android:backgroundTint="@color/orange"/>

</LinearLayout>