<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/teal_700"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_center"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_icon"
        android:src="@drawable/icon_home"
        app:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/gl_img1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <View
        android:id="@+id/view_offset"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/margin_deuxle"
        app:layout_constraintBottom_toBottomOf="@id/gl_center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        app:layout_constraintTop_toTopOf="@id/view_offset"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:id="@+id/cuadro"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_login"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_default"
                android:textSize="@dimen/font_size_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_email"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:layout_marginVertical="@dimen/margin_default"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="my@mail.com"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_password"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:layout_marginVertical="@dimen/margin_default"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="password"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/gl_btnLogin"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/CardView"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginHorizontal="@dimen/margin_deuxle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/txt_login"
        app:layout_constraintTop_toTopOf="@id/gl_btnLogin"
        app:layout_constraintBottom_toBottomOf="@id/gl_btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_forgot_psd"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
